@@ -1,10 +1,9 @@
 package de.hb_dhbw_stuttgart.tutorscout24_android;
 
+import android.app.Fragment;
 import android.content.Context;
-import android.net.Uri;
 import android.os.Build;
 import android.os.Bundle;
-import android.app.Fragment;
 import android.support.annotation.RequiresApi;
 import android.support.v4.widget.SwipeRefreshLayout;
 import android.view.LayoutInflater;
@@ -28,12 +27,6 @@ import butterknife.ButterKnife;
 
 
 /**
- * A simple {@link Fragment} subclass.
- * Activities that contain this fragment must implement the
- * {@link MyTutoringsFragment.OnFragmentInteractionListener} interface
- * to handle interaction events.
- * Use the {@link MyTutoringsFragment#newInstance} factory method to
- * create an instance of this fragment.
  */
 @RequiresApi(api = Build.VERSION_CODES.M)
 public class MyTutoringsFragment extends Fragment {
@@ -42,15 +35,8 @@ public class MyTutoringsFragment extends Fragment {
     private SwipeRefreshLayout swipeContainerOffers;
     private SwipeRefreshLayout swipeContainerRequests;
 
-    private OnFragmentInteractionListener mListener;
-
     public MyTutoringsFragment() {
         // Required empty public constructor
-    }
-
-    public static MyTutoringsFragment newInstance(String param1, String param2) {
-        MyTutoringsFragment fragment = new MyTutoringsFragment();
-        return fragment;
     }
 
     @Override
@@ -65,7 +51,7 @@ public class MyTutoringsFragment extends Fragment {
         rootView = inflater.inflate(R.layout.fragment_my_tutorings, container, false);
         ButterKnife.bind(this, rootView);
 
-        TabHost host = (TabHost) rootView.findViewById(R.id.tab_host_tutorings);
+        TabHost host = rootView.findViewById(R.id.tab_host_tutorings);
         host.setup();
         //Tab 1
         TabHost.TabSpec spec = host.newTabSpec("Meine Angebote");
@@ -79,7 +65,7 @@ public class MyTutoringsFragment extends Fragment {
         spec.setIndicator("Meine Anfragen");
         host.addTab(spec);
 
-        swipeContainerOffers = (SwipeRefreshLayout) rootView.findViewById(R.id.swipeContainerOffers);
+        swipeContainerOffers = rootView.findViewById(R.id.swipeContainerOffers);
         swipeContainerOffers.setOnRefreshListener(new SwipeRefreshLayout.OnRefreshListener() {
             @Override
             public void onRefresh() {
@@ -87,7 +73,7 @@ public class MyTutoringsFragment extends Fragment {
             }
         });
 
-        swipeContainerRequests = (SwipeRefreshLayout) rootView.findViewById(R.id.swipeContainerRequests);
+        swipeContainerRequests = rootView.findViewById(R.id.swipeContainerRequests);
         swipeContainerRequests.setOnRefreshListener(new SwipeRefreshLayout.OnRefreshListener() {
             @Override
             public void onRefresh() {
@@ -172,20 +158,6 @@ public class MyTutoringsFragment extends Fragment {
         return authentication;
     }
 
-    public String trimMessage(String json, String key) {
-        String trimmedString = null;
-
-        try {
-            JSONObject obj = new JSONObject(json);
-            trimmedString = obj.getString(key);
-        } catch (JSONException e) {
-            e.printStackTrace();
-            return null;
-        }
-
-        return trimmedString;
-    }
-
     public ArrayList<FeedItem> loadTutorings(JSONArray feedData) {
         ArrayList<FeedItem> feedArrayList = new ArrayList<>();
 
@@ -200,8 +172,8 @@ public class MyTutoringsFragment extends Fragment {
                 String subject = object.getString("subject");
                 String text = object.getString("text");
                 String expirationDate = object.getString("end");
-                Double latitude = new Double(object.getString("latitude"));
-                Double longitude = new Double(object.getString("longitude"));
+                Double latitude = Double.valueOf(object.getString("latitude"));
+                Double longitude = Double.valueOf(object.getString("longitude"));
                 FeedItem item = new FeedItem(tutoringId, creationDate, userName, subject, text, expirationDate, latitude, longitude, null);
                 feedArrayList.add(item);
             }
@@ -214,9 +186,9 @@ public class MyTutoringsFragment extends Fragment {
     public void showTutoringsInList(final ArrayList<FeedItem> feedArrayList, String type) {
         //erzeuge Listenobjekte für die ListView
         ListView feedListView = null;
-        feedItemAdapter adapter = new feedItemAdapter(feedArrayList, getContext());
-        if (type.equals("offers")) feedListView = (ListView) rootView.findViewById(R.id.myOffers_list_view);
-        else if (type.equals("requests")) feedListView = (ListView) rootView.findViewById(R.id.myRequests_list_view);
+        FeedItemAdapter adapter = new FeedItemAdapter(feedArrayList, getContext());
+        if (type.equals("offers")) feedListView = rootView.findViewById(R.id.myOffers_list_view);
+        else if (type.equals("requests")) feedListView = rootView.findViewById(R.id.myRequests_list_view);
         feedListView.setAdapter(adapter);
         feedListView.setOnItemLongClickListener(new AdapterView.OnItemLongClickListener() {
             @Override
@@ -240,21 +212,5 @@ public class MyTutoringsFragment extends Fragment {
     @Override
     public void onDetach() {
         super.onDetach();
-        mListener = null;
-    }
-
-    /**
-     * This interface must be implemented by activities that contain this
-     * fragment to allow an interaction in this fragment to be communicated
-     * to the activity and potentially other fragments contained in that
-     * activity.
-     * <p>
-     * See the Android Training lesson <a href=
-     * "http://developer.android.com/training/basics/fragments/communicating.html"
-     * >Communicating with Other Fragments</a> for more information.
-     */
-    public interface OnFragmentInteractionListener {
-        // TODO: Update argument type and name
-        void onFragmentInteraction(Uri uri);
     }
 }
